# UE5-Project-Sync-AWS-S3

./: Cargo.toml  build.rs  env.example  readme.md
src/: main.rs
src/functions/: mod.rs  pull.rs  push.rs
src/tools/: aws.rs  compressing.rs  mod.rs
src/utils/: input.rs  mod.rs  prints.rs  project.rs  router.rs  unreal_engine.rs  user.rs
