[package]
name = "RsGet"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1.0.3", features = ["full"] }
aws-sdk-s3 = { version = "1.86.0", features = ["behavior-version-latest"] }
sevenz-rust = { version = "0.5.4", features = ["compress"] }
dotenv = "0.15.0"
whoami = "2.0.0-pre.2"
colored = "2.0.4"
walkdir = "2.3.3"
indicatif = "0.17.11"
anyhow = "1.0.98"
bytes = "1.0.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rust-ini = "0.21.1"
rustyline = { version = "12.0.0" ,features = ["with-file-history"] }
[build-dependencies]  # <-- This is the correct section for winres
winres = "0.1.12"