[package]
name = "RsGet"
version = "0.1.0"
edition = "2024"
build = "build.rs"
readme = "readme.md"
repository = "https://github.com/NikolaKaplin/UE5-Project-Sync-AWS-S3"


[dependencies]
tokio = { version = "1.0.3", features = ["full"] }
aws-sdk-s3 = { version = "1.86.0", features = ["behavior-version-latest"] }
sevenz-rust = { version = "0.5.4", features = ["compress"] }
dotenv = "0.15.0"
whoami = "2.0.0-pre.2"
colored = "2.0.4"
walkdir = "2.3.3"
indicatif = "0.17.11"
anyhow = "1.0.98"
bytes = "1.0.1"
sysinfo = '0.35.2'
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rust-ini = "0.21.1"
notify-rust = "4.8.0"
rustyline = { version = "12.0.0" ,features = ["with-file-history"] }

[build-dependencies]
winres = "0.1.12"



